add cy version